# boardAssistant

./: .gitignore  .vercelignore  README.md  blueprint.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: ci.yml
analyses/: user-journeys-by-role.md
api/: core-service.ts  rag.ts
backend/: .eslintrc.cjs  Dockerfile  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
backend/prisma/: schema.prisma  seed.ts
docs/: architecture-supabase.md  architecture.md  compliance.md  data-flow-analysis.md  env.example  ingestion.md  roadmap.md  runbook.md  validation-report.md
frontend/: .eslintrc.cjs  Dockerfile  env.example  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
observability/: alertmanager.yml  loki-config.yml  prometheus.yml
prompts/: 001-build-board-assistant-poc.md  002-supabase-vercel-migration.md  003-analyze-role-user-flows.md
rag-service/: Dockerfile  package.json  pyproject.toml
rag-service/app/: main.py
rag-service/app/api/: router.py
rag-service/app/cli/: bootstrap_embeddings.py
rag-service/app/core/: config.py  database.py  embedding.py
rag-service/app/schemas/: answer.py  classify.py  embed.py
rag-service/app/services/: assistant.py
rag-service/tests/: test_api.py  test_embeddings.py
semgrep_rules/: supabase-auth.yml
supabase/: config.toml  env.example  seed.sql
tools/: .eslintrc.cjs  create-admin-user.ts  fetch-sources.ts  package.json  tsconfig.json
(+88 files in other folders)
