[project]
name = "rag-service"
version = "0.1.0"
description = "RAG microservice for Board Member Assistant PoC"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "sqlalchemy[asyncio]>=2.0.32,<2.1.0",
  "asyncpg>=0.29.0,<0.30.0",
  "pydantic>=2.8.2,<2.9.0",
  "python-dotenv>=1.0.1,<1.1.0",
  "tenacity>=9.0.0,<9.1.0",
  "prometheus-client>=0.20.0,<0.21.0",
  "httpx>=0.27.2,<0.28.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<8.4.0",
  "pytest-asyncio>=0.23.8,<0.24.0",
  "httpx>=0.27.2,<0.28.0",
  "ruff>=0.6.4,<0.7.0"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
